force-app/main/default/objects/Revenue__c/fields/Altri_Costi__c.field-meta.xml
<CustomField>
    <fullName>Altri_Costi__c</fullName>
    <label>Altri Costi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>