force-app/main/default/objects/Revenue__c/fields/Centro_ricavo__c.field-meta.xml
<CustomField>
    <fullName>Centro_ricavo__c</fullName>
    <label>Centro ricavo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Costo</fullName>
            </value>
            <value>
                <fullName>Nexus - Editoria</fullName>
            </value>
            <value>
                <fullName>Nexus - Operations</fullName>
            </value>
            <value>
                <fullName>Nexus - Progetti</fullName>
            </value>
            <value>
                <fullName>Nexus - T&amp;M</fullName>
            </value>
            <value>
                <fullName>Nexus Sales - Operations</fullName>
            </value>
            <value>
                <fullName>Nexus Sales - Progetti</fullName>
            </value>
            <value>
                <fullName>Nexus Sales - SalesForce</fullName>
            </value>
            <value>
                <fullName>Nexus Sales - T&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>