force-app/main/default/objects/Revenue__c/fields/CIComparison2020__c.field-meta.xml
<CustomField>
    <fullName>CIComparison2020__c</fullName>
    <label>CI Comparison 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>