force-app/main/default/objects/Revenue__c/fields/ComparisonTo2021__c.field-meta.xml
<CustomField>
    <fullName>ComparisonTo2021__c</fullName>
    <label>Comparison To 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>