force-app/main/default/objects/Revenue__c/fields/Costi__c.field-meta.xml
<CustomField>
    <fullName>Costi__c</fullName>
    <formula>Costo_di_rivendita_HW_e_SW_e_ATI__c +  Costi_del_Personale_diretto_e_indiretto__c +  Costi_di_trasferta__c +  Costi_per_attivit_a_corpo__c +  Altri_Costi__c + costi_da_Fatture_da_Ricevere__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>