force-app/main/default/objects/Revenue__c/fields/costi_da_Fatture_da_Ricevere__c.field-meta.xml
<CustomField>
    <fullName>costi_da_Fatture_da_Ricevere__c</fullName>
    <label>costi da Fatture da Ricevere</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>