force-app/main/default/objects/Revenue__c/fields/Costi_del_Personale_diretto_e_indiretto__c.field-meta.xml
<CustomField>
    <fullName>Costi_del_Personale_diretto_e_indiretto__c</fullName>
    <label>Costi del Personale (diretto e indiretto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>