force-app/main/default/objects/Revenue__c/fields/Costi_di_trasferta__c.field-meta.xml
<CustomField>
    <fullName>Costi_di_trasferta__c</fullName>
    <label>Costi di trasferta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>