force-app/main/default/objects/Revenue__c/fields/Costi_per_attivit_a_corpo__c.field-meta.xml
<CustomField>
    <fullName>Costi_per_attivit_a_corpo__c</fullName>
    <label>Costi per attività a corpo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>