force-app/main/default/objects/Revenue__c/fields/Costo_di_rivendita_HW_e_SW_e_ATI__c.field-meta.xml
<CustomField>
    <fullName>Costo_di_rivendita_HW_e_SW_e_ATI__c</fullName>
    <label>Costo di rivendita HW e SW  e ATI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>