force-app/main/default/objects/Revenue__c/fields/Costs__c.field-meta.xml
<CustomField>
    <fullName>Costs__c</fullName>
    <formula>HwSwAtiResaleCosts__c +  DirectAndUndirectStaffCosts__c +  TravelCosts__c +  LumpsumActivitiesCosts__c +  OtherCosts__c + CostsFromInvoicesToBeReceived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>