force-app/main/default/objects/Revenue__c/fields/CostsFromInvoicesToBeReceived__c.field-meta.xml
<CustomField>
    <fullName>CostsFromInvoicesToBeReceived__c</fullName>
    <label>Costs From Invoices To Be Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>