force-app/main/default/objects/Revenue__c/fields/Di_cui_ricavi_anni_precedenti__c.field-meta.xml
<CustomField>
    <fullName>Di_cui_ricavi_anni_precedenti__c</fullName>
    <label>Di cui ricavi anni precedenti</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>