force-app/main/default/objects/Revenue__c/fields/di_cui_Risconto_al_2021__c.field-meta.xml
<CustomField>
    <fullName>di_cui_Risconto_al_2021__c</fullName>
    <label>di cui Risconto al 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>