force-app/main/default/objects/Revenue__c/fields/DirectAndUndirectStaffCosts__c.field-meta.xml
<CustomField>
    <fullName>DirectAndUndirectStaffCosts__c</fullName>
    <label>Direct And Undirect Staff Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>