force-app/main/default/objects/Revenue__c/fields/HwSwAtiResaleCosts__c.field-meta.xml
<CustomField>
    <fullName>HwSwAtiResaleCosts__c</fullName>
    <label>Hw Sw Ati Resale Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>