force-app/main/default/objects/Revenue__c/fields/LumpsumActivitiesCosts__c.field-meta.xml
<CustomField>
    <fullName>LumpsumActivitiesCosts__c</fullName>
    <label>Lump Sum Activities Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>