force-app/main/default/objects/Revenue__c/fields/MaxRevenueEstimate2020__c.field-meta.xml
<CustomField>
    <fullName>MaxRevenueEstimate2020__c</fullName>
    <label>Max Revenue Estimate 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>