force-app/main/default/objects/Revenue__c/fields/OtherCosts__c.field-meta.xml
<CustomField>
    <fullName>OtherCosts__c</fullName>
    <label>Other Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>