force-app/main/default/objects/Revenue__c/fields/ResidualRevenuesFrom2020Onwards__c.field-meta.xml
<CustomField>
    <fullName>ResidualRevenuesFrom2020Onwards__c</fullName>
    <label>Residual Revenues From 2020 Onwards</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>