force-app/main/default/objects/Revenue__c/fields/RevenueCenter__c.field-meta.xml
<CustomField>
    <fullName>RevenueCenter__c</fullName>
    <label>Revenue Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Nexus - Publishing</fullName>
            </value>
            <value>
                <fullName>Nexus - Operations</fullName>
            </value>
            <value>
                <fullName>Nexus - Projects</fullName>
            </value>
            <value>
                <fullName>Nexus - T&amp;M</fullName>
            </value>
            <value>
                <fullName>Nexus Sales - Operations</fullName>
            </value>
            <value>
                <fullName>Nexus Sales - Projects</fullName>
            </value>
            <value>
                <fullName>Nexus Sales - SalesForce</fullName>
            </value>
            <value>
                <fullName>Nexus Sales - T&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>