force-app/main/default/objects/Revenue__c/fields/Revenues2020FeFde__c.field-meta.xml
<CustomField>
    <fullName>Revenues2020FeFde__c</fullName>
    <formula>RevenuesFromIssuedInvoices2020__c +  RevenuesFromInvoicesToBeIssued2020__c +  ComparisonTo2021__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenues 2020 (Fe + Fde)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>