force-app/main/default/objects/Revenue__c/fields/RevenuesFromInvoicesToBeIssued2020__c.field-meta.xml
<CustomField>
    <fullName>RevenuesFromInvoicesToBeIssued2020__c</fullName>
    <label>Revenues From Invoices To Be Issued 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>