force-app/main/default/objects/Revenue__c/fields/RevenuesFromIssuedInvoices2020__c.field-meta.xml
<CustomField>
    <fullName>RevenuesFromIssuedInvoices2020__c</fullName>
    <label>Revenues From Issued Invoices 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>