force-app/main/default/objects/Revenue__c/fields/RevenuesFromPreviousYears__c.field-meta.xml
<CustomField>
    <fullName>RevenuesFromPreviousYears__c</fullName>
    <label>Revenues From Previous Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>