force-app/main/default/objects/Revenue__c/fields/Ricavi2020FeFde__c.field-meta.xml
<CustomField>
    <fullName>Ricavi2020FeFde__c</fullName>
    <formula>Ricavi_2020_da_Fatture_emesse__c +  Ricavi_2020_da_Fatt_da_emettere__c +  di_cui_Risconto_al_2021__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ricavi 2020 (Fe+Fde)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>