force-app/main/default/objects/Revenue__c/fields/Ricavi_2020_da_Fatt_da_emettere__c.field-meta.xml
<CustomField>
    <fullName>Ricavi_2020_da_Fatt_da_emettere__c</fullName>
    <label>Ricavi 2020 da Fatt. da emettere</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>