force-app/main/default/objects/Revenue__c/fields/Ricavi_2020_da_Fatture_emesse__c.field-meta.xml
<CustomField>
    <fullName>Ricavi_2020_da_Fatture_emesse__c</fullName>
    <label>Ricavi 2020 da Fatture emesse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>