force-app/main/default/objects/Revenue__c/fields/Ricavi_Residui_dal_2020_in_poi__c.field-meta.xml
<CustomField>
    <fullName>Ricavi_Residui_dal_2020_in_poi__c</fullName>
    <label>Ricavi Residui dal 2020 in poi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>