force-app/main/default/objects/Revenue__c/fields/Risconto_CI_2020__c.field-meta.xml
<CustomField>
    <fullName>Risconto_CI_2020__c</fullName>
    <label>Risconto CI 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>