force-app/main/default/objects/Revenue__c/fields/Stima_Ricavi_Max_2020__c.field-meta.xml
<CustomField>
    <fullName>Stima_Ricavi_Max_2020__c</fullName>
    <label>Stima Ricavi Max 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>