force-app/main/default/objects/Revenue__c/fields/TotalContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalContractRevenue__c</fullName>
    <label>Total Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>