force-app/main/default/objects/Revenue__c/fields/Totale_Ricavi_Contratto__c.field-meta.xml
<CustomField>
    <fullName>Totale_Ricavi_Contratto__c</fullName>
    <label>Totale Ricavi Contratto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>