force-app/main/default/objects/Revenue__c/fields/TravelCosts__c.field-meta.xml
<CustomField>
    <fullName>TravelCosts__c</fullName>
    <label>Travel Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>