force-app/main/default/objects/Revenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Centro_ricavo__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Costi__c</columns>
    <columns>Ricavi2020FeFde__c</columns>
    <columns>Stima_Ricavi_Max_2020__c</columns>
    <columns>Totale_Ricavi_Contratto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>